# total-prelude

./: ChangeLog.md  LICENSE  default.nix  total-prelude.cabal  total-prelude.nix
src/Prelude/: Total.hs
