name:                total-prelude
version:             0.1.0.0
synopsis:            Replace partial functions with total functions in the standard prelude
homepage:            https://github.com/knupfer/total-prelude
license:             MIT
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
copyright:           2016, Florian Knupfer
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Prelude.Total
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
